<resources>
    <string name="app_name">Neuron</string>
    <string name="action_settings">Settings</string>
    <string name="to_address">目标地址：</string>
    <string name="transfer_text">转账：</string>
    <string name="transfer_button">转账</string>
    <string name="receive_money">收款</string>
    <string name="current_block_number">当前块高度：</string>
    <string name="balance">余额：</string>
    <string name="account">账号：</string>
    <string name="transfer_value">转账金额：</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="sending">发送中...</string>
    <string name="select_wallet">请选择钱包</string>
    <string name="title_add_token">添加新资产</string>
    <string name="title_add_wallet">新增钱包</string>
    <string name="title_token_management">资产管理</string>
    <string name="title_receive_qrcode">收款码</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="confirm_mnemonic">确认助记词</string>
    <string name="title_transaction_detail">交易详情</string>
    <string name="title_transfer">转账</string>
    <string name="title_create_wallet">创建钱包</string>
    <string name="title_import_wallet">导入钱包</string>
    <string name="create_wallet">生成钱包</string>
    <string name="next_action">下一步</string>
    <string name="backup_complete">完成备份</string>
    <string name="import_wallet">开始导入</string>
    <string name="quick_backup_button">一键备份</string>
    <string name="quick_backup_restore">一键恢复</string>
    <string name="change_password">修改密码</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="add_chain">添加链</string>
    <string name="import_chain">导入链</string>
    <string name="erc20_address">资产合约（ERC20）地址：</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="transaction_list_description">最近交易记录（默认十笔）</string>
    <string name="wallet_manage">钱包管理</string>
    <string name="chain_manage">链管理</string>
    <string name="import_wallet_content">将备份好的keystore文件内容拷贝到输入框，或扫描二维码，导入密钥数据</string>
    <string name="quick_backup_content">本软件不会在云端保存您的任何信息，包括私钥、应用列表以及区块链配置。因此，您的数字资产完全依赖于您自己的保管，请妥善对您的本地数据进行保存</string>
    <string name="change_password_warning">再次提示密码不能找回</string>
    <string name="import_mnemonic_warning">请输入钱包助记词并选择助记词模式</string>
    <string name="import_private_key_warning">请将私钥粘贴至输入框，或通过二维码输入</string>
    <string name="read_service_file">我已经仔细阅读并同意《服务条款》</string>
    <string name="tab_application">应用</string>
    <string name="tab_wallet">钱包</string>
    <string name="tab_settings">设置</string>
    <string name="tab_transaction">交易</string>
    <string name="add_custom_token">添加自定义资产</string>
    <string name="qrcode_transfer">扫一扫向我付款</string>
    <string name="copy_address">复制地址</string>
    <string name="backup_mnemonic_warning1">助记词将被用来恢复钱包或重置钱包密码</string>
    <string name="backup_mnemonic_warning2">- 如您的助记词被他人获取，您的财产可能受到损失</string>
    <string name="backup_mnemonic_warning3">- 不要截图或传送给他人</string>
    <string name="backup_mnemonic_warning4">- 推荐朗读并背诵全文，或者抄写并放在安全的地方</string>
    <string name="confirm_mnemonic_warning">请按顺序点击助记词，以确认你的备份助记词正确</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_action">确认</string>
    <string name="input_app_website_hint">请输入应用网址</string>


    <string name="message_permission_always_failed">请允许我们使用权限:\n\n%1$s</string>
    <string name="resume">恢复</string>
    <string name="message_permission_rationale">申请下列权限以保证应用可以正常运行:\n\n%1$s</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="title_set_value">设置金额</string>
    <string name="share_keystore">分享Keystore</string>
    <string name="password_suggestion">密码包含大写字母、小写字母、数字、特殊符号中的至少三类，且长度在8到50之间</string>
    <string name="empty_no_token_data">您还没有Token数据</string>
    <string name="empty_no_transaction_data">您还没有交易数据</string>
    <string name="empty_no_history_data">您还没有历史浏览记录</string>
    <string name="ethereum_main_net">Ethereum Mainnet</string>
    <string name="confirm_pay">确认支付</string>
    <string name="loading">正在加载</string>
    <string name="reject">拒绝</string>
    <string name="approve">接受</string>
    <string name="requester">请求人</string>
    <string name="receive_address">接收地址</string>
    <string name="transfer_amount">转账金额</string>
    <string name="transfer_sum">请求费用总和（含手续费）</string>
    <string name="pay_detail">支付详情</string>
    <string name="transfer_to_address">转入地址</string>
    <string name="pay_wallet">付款钱包</string>
    <string name="transfer_fee">交易费用</string>
    <string name="update_password">修改密码</string>
    <string name="wallet_name">钱包名称</string>
    <string name="input_wallet_name">请输入钱包名称</string>
    <string name="title_transaction">交易</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="input_new_password_again_hint">请再次输入新密码</string>
    <string name="copy_success">复制成功</string>
    <string name="password_fail">密码错误</string>
    <string name="transfer_success">转账成功</string>
    <string name="transfer_fail">转账失败</string>
    <string name="copy">复制</string>
    <string name="share">分享</string>
    <string name="wallet_title">钱包</string>
    <string name="receive_token">收款</string>
    <string name="token_manage">资产管理</string>
    <string name="qr_scan">扫一扫</string>
    <string name="settings_title">设置</string>
    <string name="wallet_password_error">钱包密码错误</string>
    <string name="password">密码</string>
    <string name="ask_confirm_delete_wallet">确认删除钱包吗？</string>
    <string name="password_weak">您的密码太弱，请重新输入</string>
    <string name="password_not_same">两次输入的密码不一致</string>
    <string name="wallet_name_exist">该钱包名称已存在</string>
    <string name="wallet_export_success">钱包导入成功</string>
    <string name="wallet_creating">钱包创建中...</string>
    <string name="wallet_importing">钱包导入中...</string>
    <string name="generating">正在生成</string>
    <string name="password_use_protect_private_key">此密码将被用于保护私钥和交易授权</string>
    <string name="no_wallet_suggestion">您还没有钱包，请先创建或者导入钱包</string>
    <string name="dapp">DApp</string>
    <string name="collect">收藏</string>
    <string name="switch_current_wallet">切换当前钱包</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="wallet_name_not_null">钱包名称不能为空</string>
    <string name="unlock_password">解锁密码</string>
    <string name="password_again">重复密码</string>
    <string name="set_password">设置密码</string>
    <string name="no_find_password_content">没有「找回密码」!</string>
    <string name="save_password_careful">您的钱包不会被保存在云端，无法提供找回服务，请您谨慎保管</string>
    <string name="generate_wallet">生成钱包</string>
    <string name="input_old_password_hint">输入原密码</string>
    <string name="old_password_not_null">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="old_password_error">原密码不正确</string>
    <string name="update_password_success">密码修改成功</string>
    <string name="update_wallet_name">修改钱包名称</string>
    <string name="input_wallet_name_hint">请输入钱包名称</string>
    <string name="delete_success">删除成功</string>
    <string name="qrcode_handle_fail">解析二维码失败</string>
    <string name="wallet_manage_title">钱包管理</string>
    <string name="wallet_photo">钱包头像</string>
    <string name="wallet_address">钱包地址</string>
    <string name="export_keystore">导出KeyStore</string>
    <string name="transaction_detail_title">交易详情</string>
    <string name="ethereum_mainnet">Ethereum Mainnet</string>
    <string name="source_code">源代码</string>
    <string name="source_and_private">服务与隐私条款</string>
    <string name="contact_us">联系我们</string>
    <string name="press_back_finish">再按一次返回键退出</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="transfer_address_not_null">转账地址不能为空</string>
    <string name="transfer_amount_not_null">转账金额不能为空</string>
    <string name="generate_keystore_fail">KeyStore生成失败</string>
    <string name="input_correct_url">请输入正确的网页地址</string>
    <string name="address_error">地址有误：地址一般为0x开头的42位字符</string>
    <string name="network_error">网络请求错误</string>
    <string name="input_token_info">请输入Token信息</string>
    <string name="keystore">Keystore</string>
    <string name="nmemonic">助记词</string>
    <string name="private_key">私钥</string>
    <string name="set_amount">设置金额</string>
    <string name="set_value">设置金额</string>
    <string name="amount">金额</string>
    <string name="token_category">币种</string>
    <string name="qr_code_error">二维码错误</string>
</resources>
