<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <org.nervos.neuron.custom.TitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        app:title="@string/title_receive_qrcode"
        app:isShowLeft="true"/>
    
    <LinearLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle_border_gray_corner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qrcode_transfer"
            android:textSize="12sp"
            android:textColor="@color/default_black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/receive_qrcode_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/default_black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/receive_qrcode_image"
            android:layout_width="230dp"
            android:layout_height="230dp" 
            android:layout_marginTop="@dimen/default_margin"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/default_margin">
            <View
                android:id="@+id/receive_qrcode_separate"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/default_separate_gray"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/receive_qrcode_set_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/receive_qrcode_separate"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/set_amount"/>
            <TextView
                android:id="@+id/receive_qrcode_copy_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/receive_qrcode_separate"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/copy_address"/>
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/default_white_f4">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/wallet_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/wallet_photo"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/default_gray_d5"/>

            <TextView
                android:id="@+id/qrcode_wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_black"
                android:textSize="14sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/qrcode_wallet_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_black"
                android:textSize="12sp"
                android:lines="1"
                android:maxEms="12"
                android:ellipsize="end"
                android:layout_marginStart="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>